--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "isbot": "^5.1.31",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^4.2.1",
     "react-router": "^7.9.2",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0"
