--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
-  "framework": null
+  "installCommand": "npm install --legacy-peer-deps"
 }
