oh lord forgive me
forbid a girl who doesnt catch vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps",
+  "functions": {
+    "app/entry.server.tsx": {
+      "runtime": "@vercel/node"
+    }
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app/entry.server.tsx"
+    }
+  ]
 }
